--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
         <div class="head">
             <div class="contain">
                 <h1 class="logo">MARBLE</h1>
-                <ul class="menu">
-                    <li class="menu-li">HOME</li>
-                    <li class="menu-li">ABOUT</li>
-                    <li class="menu-li">JOURNAL</li>
-                    <li class="menu-li">SERVICE</li>
-                    <li class="menu-li">FEATURES</li>
-                    <li class="menu-li lit">CONTACT</li>
-                </ul>
+                <nav class="navigation">   
+                    <ul class="menu">
+                        <li class="menu-li"><a href="#">HOME</a></li>
+                        <li class="menu-li"><a href="#">ABOUT</a></li>
+                        <li class="menu-li"><a href="#">JOURNAL</a></li>
+                        <li class="menu-li"><a href="#">SERVICE</a></li>
+                        <li class="menu-li"><a href="#">FEATURES</a></li>
+                        <li class="menu-li lit"><a href="#">CONTACT</a></li>
+                        <a href="#" class="menu-btn">
+                            <span class="btn-line"></span>
+                        </a>
+                    </ul>
+                </nav> 
             </div>
         </div>
     </header>
@@ -68,7 +73,10 @@
             <div class="line"></div>
         </div>
         <div class="contain-four">
-            <div class="flex">
+            <div class="latest">
+                <p class="latest-p">OUR LATEST WORKS</p>
+            </div>
+            <div class="flexx">
                 <div class="banners">
                     <div class="banners-img1"></div>
                     <p class="banners-h">Nobis Business Card</p>
@@ -92,7 +100,7 @@
         <div class="back2"> 
             <div class="contain-five">
                 <div class="block">
-                    <p class="block-kav">”</p>
+                    <p class="block-kav">,,</p>
                     <p class="block-txt">Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Duis mollis, est non commodo luctus erat porttitor. </p>
                 </div>
             </div>
@@ -101,7 +109,7 @@
     <footer>
         <div class="back3">
             <div class="contain-six">
-                <div class="flex">  
+                <div class="flex1">  
                     <div class="foot-block">
                         <p class="foot-h1 ">GET IN TOUCH</p>
                         <p class="foot-txt pt">Fusce dapibus, tellus commodo, tortor mauris condimentum utellus fermentum, porta sem malesuada magna. </p>
@@ -135,5 +143,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="jquery/jquery-3.4.1.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
